plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(11)

minecraft {
    mappings channel: 'official', version: '1.16.5'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.39'

    shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.2.0-COMMENTS'

    shadow project(':commons')

    implementation 'uk.co.envyware:helios:1.1-SNAPSHOT'
}

shadowJar {
    configurations = [project.configurations.shadow]
    setArchivesBaseName(rootProject.name + '-Forge.jar')

    relocate('org.spongepowered.configurate', 'com.envyful.api.commons.shade.configurate')
    relocate('org.yaml.snakeyaml', 'com.envyful.api.commons.shade.snakeyaml')
    relocate('io.leangen.geantyref', 'com.envyful.api.commons.shade.geantyref')

    exclude "**/module-info.class"
}

//reobf {
//    shadowJar {}
//}

//jar.finalizedBy('reobfJar')